@@ -96,6 +96,7 @@ check-build: $(BUILD_DIRS)
 
 check-install:
 	${rpm} -U --relocate /tmp/=$(testdir)/tmp/root/ --nodeps devtool-sanity/*.rpm
+	${rpm} -U probes-test/probes-2*.rpm
 
 check-local: check-init check-pubkeys check-markup check-build check-install
 	@${rpm} -qW . > /dev/null 2>&1
@@ -128,11 +129,13 @@ check-local: check-init check-pubkeys check-markup check-build check-install
 	@${rpm} -qa --qf '[%{FILENAMES}: %{FILEPROVIDE}\n]' > /dev/null
 	@${rpm} -qa --qf '[%{FILENAMES}: %{FILEREQUIRE}\n]' > /dev/null
 	@${rpm} -qa --qf '[%{FSNAMES}: %{FSSIZES}\n]' > /dev/null
-#	@${rpm} -qa --qf '[%{SUGGESTS}\n]' > /dev/null
+	@${rpm} -qa --qf '[%{SUGGESTS}\n]' > /dev/null
 	@${rpm} --rebuilddb
 	@-${rpm} -Va > /dev/null
 	@-${rpm} -Vp tmp/manifest > /dev/null
+	@${rpm} -e probes
 	@${rpm} -e devtool-sanity
+	@-${rpm} -qp ref/cAos.i386.manifest > /dev/null
 	@-${rpm} -qp $(POPTURI)popt-1.14-1.i386.rpm > /dev/null
 	@-${rpm} -qW $(POPTURI) > /dev/null 2>&1
 	@-${rpm} -qW ftp://localhost/pub/i386-linux/RPMS > /dev/null 2>&1
