@@ -65,7 +65,6 @@ http://mirror.caoslinux.org/cAos-2/core/i386/gpm-1.20.1-62.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/gpm-devel-1.20.1-62.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/grep-2.5.1-16.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/gzip-1.3.5-11.caos.i386.rpm
-http://mirror.caoslinux.org/cAos-2/core/i386/headers/
 http://mirror.caoslinux.org/cAos-2/core/i386/info-4.8-1a.1.caos.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/initscripts-7.96-14.caos.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/iproute-2.4.7-13.caos.i386.rpm
@@ -134,7 +133,6 @@ http://mirror.caoslinux.org/cAos-2/core/i386/python-docs-2.3.3-11.caos.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/python-tools-2.3.3-11.caos.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/readline-4.3-5.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/readline-devel-4.3-5.i386.rpm
-http://mirror.caoslinux.org/cAos-2/core/i386/repodata/
 http://mirror.caoslinux.org/cAos-2/core/i386/rpm-4.4.1-4.caos.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/rpm-build-4.4.1-4.caos.i386.rpm
 http://mirror.caoslinux.org/cAos-2/core/i386/rpm-devel-4.4.1-4.caos.i386.rpm
